<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/frame_menu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_belajar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:cardCornerRadius="15dp"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_gradient_maths">

                <TextView
                    android:id="@+id/tv_title_belajar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/title_menu1"/>

                <TextView
                    android:id="@+id/tv_desc_belajar"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/desc_menu1"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_belajar"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toEndOf="@id/tv_desc_belajar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/image_belajar"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_berlatih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="@dimen/_8sdp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_menu_berlatih">

                <TextView
                    android:id="@+id/tv_title_berlatih"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/title_menu2"/>

                <TextView
                    android:id="@+id/tv_desc_berlatih"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/desc_menu2"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_berlatih"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toEndOf="@id/tv_desc_berlatih"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/image_berlatih2"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/cv_translasi"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_menu_translasi">

                <TextView
                    android:id="@+id/tv_title_translasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/title_menu3"/>

                <TextView
                    android:id="@+id/tv_desc_translasi"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/desc_menu3"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_translasi"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_desc_translasi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/image_terjemah"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</FrameLayout>
